fix: make spacing consistent in nav matrix

--- a/Styles/global/3_blocks/_nav-matrix.less
+++ b/Styles/global/3_blocks/_nav-matrix.less
@@ -17,8 +17,7 @@
     display: flex;
     align-items: baseline;
     justify-content: space-between;
-    margin-bottom: -17px;
-    margin-top: -6px;
+    margin-bottom: -8px;
     
     p {
       color: #d83a36;
