--- a/Styles/global/3_blocks/_top-menu.less
+++ b/Styles/global/3_blocks/_top-menu.less
@@ -5,12 +5,12 @@
 	color: @color__white;
 	z-index: 4;
 	background: @color__orange;
-	min-height: calc(100vh - 313px);
+	min-height: ~"calc(100vh - 313px)";
 
 	@media (min-width: 912px) {
 		&__bg {
 			background-image: linear-gradient(to right,#f15540 63.63636364%,#d83a36 36.36363636%);
-			height: calc(100vh - 312px);
+			height: ~"calc(100vh - 312px)";
 		}
 	}
 
